@startuml db_structure

skinparam {
   dpi 200
}

'..... ENTITIES START......'
together {
    entity ticket{
        **id**
        status
        type
        creation_date
        usage_timestamp
    }

    entity queue_ticket {
        first_timestamp
    }

    entity reservation_ticket{
    }

    entity priority_ticket{
    }
}

together {
    entity user{
        **phone_number**
        name 
        surname
        is_totem
    }
    entity free_timeslot_notification{
        **id**
        user_id
        weekday
        start_time
        end_time
    }
    entity verification_code{
    **number**
    code
}

entity token {
    **user_id**
    token
    end_timestamp
}

entity favorite{
    **user_id**
    **store_id**
}

}

entity reservation{
    **id**
    weekday
    start_time
    max_people_allowed
    is_active

}

entity store{
    **id**
    name
    address
    max_capacity
    curr_number
    latitude
    longitude
}

entity admin{
    **id**
    username
    password
}




'.... ENTITIES END ....'


'.... RELATIONS START....'
store }|--|{ admin : manages
store }o--|| queue_ticket : has_queue
store }o--|| priority_ticket : has_priority_queue
store }o--|| reservation : has_timeslot
store }o--o{ user : fav_stores




user }o--|| free_timeslot_notification : sets
user }o--|| ticket : associated_with

ticket <|-- queue_ticket
ticket <|-- reservation_ticket
ticket <|-- priority_ticket

reservation_ticket ||--o{ reservation : associated_with

user |o--|| verification_code
user |o--|| token
user }o--|{favorite




'.... RELATIONS END .....'



@enduml